--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -88,3 +88,26 @@ $medium: #000;
 $stackoverflow: #f48024;
 $instagram: #c13584;
 $kaggle: #20beff;
+$telegram: #1890c0;
+$discord: #5865F2;
+
+
+$laravel : #FF2D20;
+$html5 : #E34F26;
+$css3 : #1572B6;
+$sass : #CC6699;
+$bootstrap : #7952B3;
+$javascript : #F7DF1E;
+$react : #61DAFB;
+$nodejs : #339933;
+$npm : #CB3837;
+$mysql : #4479A1;
+$php : #777BB3;
+$python : #3776AB;
+$git : #F05032;
+$tailwind : #06B6D4;
+$composer : #885630;
+$inertia : #0081C9;
+$vuejs : #4FC08D;
+$jquery : #0769AD;
+$cpanel : #FF6C2C;
