--- a/src/components/socialMedia/SocialMedia.scss
+++ b/src/components/socialMedia/SocialMedia.scss
@@ -68,6 +68,14 @@
   background-color: $instagram;
 }
 
+.telegram i {
+  background-color: $telegram;
+}
+
+.discord i {
+  background-color: $discord;
+}
+
 /* Hover Transition */
 .twitter i:hover,
 .google i:hover,
@@ -78,7 +86,9 @@
 .instagram i:hover,
 .stack-overflow i:hover,
 .kaggle i:hover,
-.medium i:hover {
+.medium i:hover,
+.telegram i:hover,
+.discord i:hover {
   background-color: $textColor;
 }
 
