--- a/src/components/educationCard/EducationCard.scss
+++ b/src/components/educationCard/EducationCard.scss
@@ -5,7 +5,7 @@
   flex-direction: row;
 }
 
-.batas{
+.batas {
   margin: 0;
 }
 
@@ -80,6 +80,27 @@
 
 .education-text-bullets > ul {
   margin-top: 0.5rem;
+}
+
+.education-text-graduation {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  margin: 10px 20px;
+
+  .graduation-link {
+    color: $textColor;
+    text-decoration: none;
+    margin: 0px 10px;
+    cursor: pointer;
+  }
+  .graduation-link:hover {
+    color: $buttonColor;
+  }
+}
+
+.dark-menu .graduation-link:hover {
+  background-color: $buttonColor !important;
 }
 
 /* Media Query */
