--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -56,13 +56,13 @@
   float: left;
   font-size: 1.5em;
   text-decoration: none;
-  margin-top: 10px;
+  // margin-top: 10px;
   line-height: normal;
 }
 
 .header .logo-name {
-  font-family: "Agustina Regular";
-  font-weight: bold;
+  font-family: "Amertha Regular";
+  // font-weight: bold;
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
   padding: 0 10px;
