--- a/src/components/softwareSkills/SoftwareSkill.scss
+++ b/src/components/softwareSkills/SoftwareSkill.scss
@@ -1,7 +1,7 @@
 @import "../../_globalColor";
 
 .dev-icons {
-  padding-left: 0;
+  // padding-left: 0;
   list-style: none;
   font-size: 3rem;
   margin-bottom: 0px;
