--- a/src/containers/splashScreen/SplashScreen.css
+++ b/src/containers/splashScreen/SplashScreen.css
@@ -12,12 +12,20 @@
 
 .splash-title-container {
   font-size: 2.5rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
   text-decoration: none;
 }
 .splash-title {
-  font-family: "Agustina Regular", cursive;
-  font-weight: bold;
+  font-family: "Amertha Regular", cursive;
+  /* font-weight: bold; */
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
   padding: 0 20px;
+}
+
+@media (max-width: 768px) {
+  .splash-title-container {
+    margin-top: 0;
+  }
 }
