--- a/src/containers/workExperience/WorkExperience.scss
+++ b/src/containers/workExperience/WorkExperience.scss
@@ -7,6 +7,7 @@
 .experience-heading {
   font-size: 56px;
   font-weight: 400;
+  margin-top: 0;
 }
 
 .experience-container {
@@ -14,7 +15,7 @@
   width: 90%;
   padding: 20px 10px;
   margin: 0px auto;
-  margin-top: 2rem;
+  // margin-top: 2rem;  
 }
 
 .experience-container > * {
